tweaked sticky header top index, small gap is rendering in browsers where it shouldn't. likely a browser bug

--- a/components/JGrid/JGrid.module.scss
+++ b/components/JGrid/JGrid.module.scss
@@ -36,7 +36,7 @@
 				&.header {
 					&.sticky {
 						position: sticky;
-						top: 0;
+						top: -0.5px;
 						z-index: 5;
 					}
 					user-select: none;
